compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__ok_2_args.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 395
expression: "let Ok(1, x) = 1"
---
----- SOURCE CODE
let Ok(1, x) = 1

----- ERROR
error: Incorrect arity
  ┌─ /src/one/two.rakun:1:5
  │
1 │ let Ok(1, x) = 1
  │     ^^^^^^^^ Expected 1 argument, got 2
